// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the PartTypeData component for a new part type with no attributes 1`] = `
<React.Fragment>
  <FormTextInput
    fieldName="shortName_new"
    onClick={[Function]}
    placeholder="add new"
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_new"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_new"
    name="can_be_substituted_new"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_new"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_new"
    name="can_be_omitted_new"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_facing_new"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_facing_new"
    name="customer_facing_new"
    onChange={[Function]}
    type="checkbox"
  />
  Attributes: 0
  Synonyms: 0
  <React.Fragment>
    <PartTypeAttributes
      attributes={Array []}
      partTypeKey="new"
    />
    <PartTypeSynonyms
      partTypeKey="new"
      synonyms={Array []}
    />
  </React.Fragment>
</React.Fragment>
`;

exports[`displays the PartTypeData component for an existing part type with attributes, detail hidden 1`] = `
<React.Fragment>
  <FormTextInput
    fieldName="shortName_21"
    onClick={[Function]}
    placeholder="add new"
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_21"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_21"
    name="can_be_substituted_21"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_21"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_21"
    name="can_be_omitted_21"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_facing_21"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_facing_21"
    name="customer_facing_21"
    onChange={[Function]}
    type="checkbox"
  />
  Attributes: 0
  Synonyms: 0
</React.Fragment>
`;

exports[`displays the PartTypeData component for an existing part type with attributes, detail shown 1`] = `
<React.Fragment>
  <FormTextInput
    fieldName="shortName_dummy2"
    onClick={[Function]}
    placeholder="add new"
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_dummy2"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_dummy2"
    name="can_be_substituted_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_dummy2"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_dummy2"
    name="can_be_omitted_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_facing_dummy2"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_facing_dummy2"
    name="customer_facing_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  Attributes: 2
  Synonyms: 2
  <React.Fragment>
    <PartTypeAttributes
      attributes={
        Array [
          "attribute1",
          "attribute2",
        ]
      }
      partTypeKey="dummy2"
    />
    <PartTypeSynonyms
      partTypeKey="dummy2"
      synonyms={
        Array [
          "synonym1",
          "synonym1",
        ]
      }
    />
  </React.Fragment>
</React.Fragment>
`;
